--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -43,17 +43,27 @@
   "contact": {
     "title": "تواصل معنا",
     "form": {
+      "firstName": "الاسم الاول",
+      "lastName": "الاسم الثاني",
+      "title": "أدخل بياناتك",
       "name": "الاسم الكامل",
       "email": "البريد الإلكتروني",
       "phone": "رقم الهاتف",
+      "password": "كلمة المرور",
+      "confirmPassword": "تاكيد كلمة المرور",
       "message": "اكتب رسالتك هنا",
       "submit": "إرسال",
+      "create": "إنشاء حساب",
+      "forgetPassword": "نسيت كلمة المرور؟",
       "toastTitle": "لقد أرسلت القيم التالية",
       "usernameError": "يجب أن يكون الاسم على الأقل حرفين.",
       "emailError": "البريد الإلكتروني غير صالح.",
       "phoneError": "يجب أن يحتوي رقم الهاتف على أرقام فقط.",
       "messageMinError": "يجب أن تكون الرسالة على الأقل 10 أحرف.",
-      "messageMaxError": "يجب ألا تتجاوز الرسالة 160 حرفًا."
+      "messageMaxError": "يجب ألا تتجاوز الرسالة 160 حرفًا.",
+      "passwordUpperError": "كلمة المرور يجب أن تحتوي على حرف كبير واحد على الأقل.",
+      "passwordNumberError": "كلمة المرور يجب أن تحتوي على رقم واحد على الأقل.",
+      "passwordSpecialError": "كلمة المرور يجب أن تحتوي على رمز خاص واحد على الأقل."
     }
   },
   "footer": {
